# mvcnn_pytorch

./: .gitignore  README.md  download_dataset.sh  predict_mvcnn.py  predict_mvcnn_settings.json  pyproject.toml  settings.json  train_mvcnn.py  train_mvcnn_settings.json
models/: __init__.py  model.py  model_settings.py  mvcnn.py  mvcnn_settings.py  svcnn.py  svcnn_settings.py
mvcnn/: __init__.py  dataloader_settings.py  dataset_settings.py  metrics.py  model.py  multiview_dataset.py  mvcnn.py  optimizer_settings.py  predictor.py  random_discreet_rotation.py  single_view_dataset.py  svcnn.py  trainer.py  trainer_settings.py
tools/: __init__.py  metrics.py  multiview_dataset.py  single_view_dataset.py  trainer.py
