[tool.poetry]
name = "mvcnn-pytorch"
version = "0.1.0"
description = ""
authors = ["Alexis Marion <amarion.pro+github@mailbox.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
torch = "^2.2.1"
torchvision = "^0.17.1"
scikit-image = "^0.22.0"
pydantic = "^2.6.4"
pydantic-settings = "^2.2.1"
tensorboardx = "^2.6.2.2"
typer = "^0.9.0"
pandas = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
